Add Render deployment config

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,13 @@
 services:
-  - type: cron
-    name: telegram-stock-bot
-    schedule: "*/5 * * * *"
-    runtime: python
-    buildCommand: ""
-    startCommand: "python app.py"
+  - type: worker
+    name: stock-signal-bot
+    env: python
+    repo: https://github.com/IsherCoder/stock-signal-bot
+    branch: main
+    plan: free
+    startCommand: python app.py
+    envVars:
+      - key: TELEGRAM_API
+        value: 7957629826:AAG4yUMTw7lzDpFiQOApEyMJfF99sH93E0U
+      - key: TELEGRAM_USER_ID
+        value: your_actual_user_id
